--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
@@ -21,7 +22,10 @@
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.19.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.2.0",
     "wowjs": "^1.1.3",
     "yup": "^1.3.2"
