--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "^1.5.8",
