--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
