--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
+    "primereact": "^10.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
