--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.18.6",
+    "@mui/x-date-pickers": "^6.18.7",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "primereact": "^10.3.0",
