--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "primereact": "^10.3.0",
     "prop-types": "^15.8.1",
