--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "primereact": "^10.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.1",
     "react-perfect-scrollbar": "^1.5.8",
